--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script> -->
-    <script src="/static/mqttws31.min.js" type="text/javascript"></script>
+    <script src="/mqttws31.min.js" type="text/javascript"></script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
